# my_SO100ARM

./: .gitignore  Assembly.md  BOM.md  Configuring_the_Servos.md  FE-URT-1 User Manual Translated.md  Feetech_resources.md  README.md  URDF.md  duckie.md  pycamp.md
BOM/: FE-URT-1_User_Manual_Translated.md  STS3215_servo.md  STS3215_servo_kit.md  Waveshare_25514_Driver_Board.md
BOM/assets/feetech/: STS Memory Table.xlsx
CAD/: README.md
CAD/my_wrist_camera_mount/: my_wrist_camera_mount_v3-Part.stl  my_wrist_camera_mount_v3.FCStd  wrist_camera_mount.stl
CAD/my_wrist_camera_mount/v3_export_to_gazebo/: fixed_jaw_with_wrist_camera_mount_v3.FCStd  my_wrist_camera_mount_v3_scaled_dims_in_m.stl
CAD/my_wrist_camera_mount/versions/: my_wrist_camera_mount.FCStd  my_wrist_camera_mount_v2.FCStd
CAD/rubber-duck/: README.md  Rubber duck5.SLDPRT  Rubber duck5.step  Rubber_duck5.dae  duckie.blend  duckie.dae  duckie.sldprt  duckie.step
CAD/rubber-duck/duckie_obj/: duckie.mtl
assets/logos_duckie/gimp_originals/: duckies.xcf
scripts/: README.md  RobotArmController.py  crude_ping.py  my_STservo.py  pick_barrel.json  ping.py  position.txt  read.py  saved_positions.json  sync_read.py  test.json  write.py
src/my_arm_description/: CMakeLists.txt  README.md  package.xml
src/my_arm_description/config/: gazebo_gui.config  gz_bridge_params.yaml  my_arm.rviz  ros2_controllers.yaml
src/my_arm_description/launch/: my_arm.launch.py
src/my_arm_description/meshes/: Fixed_Jaw_w_cam_mount_v3.STL  my_arm.FCStd
src/my_arm_description/urdf/: my_arm.urdf.xacro  my_camera.xacro
src/my_worlds/: CMakeLists.txt  README.md  package.xml
src/my_worlds/CAD/duckie/: duckie.sldprt  duckie.step
src/my_worlds/CAD/eco_disaster/: Barrel_Green.dae  Barrel_Red.dae
src/my_worlds/launch/: gazebo.launch.py
src/my_worlds/worlds/: duckieworld.sdf  eco_disaster_config1.sdf  eco_disaster_config2.sdf
(+15 files in other folders)
